# aiment

./: README.md  pyproject.toml  report.md
src/aiment/: __init__.py  app.py  crew.py  main.py
src/aiment/config/: agents.yaml  tasks.yaml
src/aiment/tools/: __init__.py  custom_tool.py
student_data/12345/: profile.json
student_data/S12345/: profile.json
