[project]
name = "aiment"
version = "0.1.0"
description = "aiment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
aiment = "aiment.main:run"
run_crew = "aiment.main:run"
train = "aiment.main:train"
replay = "aiment.main:replay"
test = "aiment.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
